Fixed button styling on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2780,9 +2780,10 @@
 					ul.actions:not(.fixed) li input[type="button"],
 					ul.actions:not(.fixed) li button,
 					ul.actions:not(.fixed) li .button {
-						width: 20%;
+						width: fit-content;
 						display: inline-table;
 						margin-bottom: 0;
+						justify-self: anchor-center;
 					}
 
 						ul.actions:not(.fixed) li input[type="submit"].icon:before,
